# videogame-library-backend-rust

./: .gitignore  Cargo.toml  README.md
api/: openapi.yaml
src/: main.rs
src/application/: mod.rs
src/application/ports/input/: game_service.rs  library_service.rs  mod.rs  platform_service.rs  user_service.rs
src/application/ports/output/: favorite_game_event_publisher.rs  game_provider.rs  library_repository.rs  mod.rs  platform_provider.rs  user_repository.rs
src/application/services/: game_service.rs  library_service.rs  mod.rs  platform_service.rs  user_service.rs
src/domain/: artwork.rs  auth.rs  game.rs  mod.rs  page.rs  platform.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/igdb/: client.rs  dtos.rs  game_provider.rs  mod.rs  platform_provider.rs
src/infrastructure/kafka/: favorite_game_event_publisher.rs  mod.rs
src/infrastructure/persistence/: library_repository.rs  mod.rs  user_repository.rs
src/infrastructure/web/: auth_middleware.rs  error.rs  mappers.rs  mod.rs
src/infrastructure/web/dtos/: common_dtos.rs  game_dtos.rs  mod.rs  platform_dtos.rs  user_dtos.rs
src/infrastructure/web/routes/: game_routes.rs  health_routes.rs  library_routes.rs  mod.rs  platform_routes.rs  user_routes.rs
